<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginRight="@dimen/item_margin"
        android:background="@drawable/bg_fragment_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/item_margin"
            android:textColor="@color/warning"
            android:textSize="18sp"
            android:text="@string/warning" />

        <TextView
            android:id="@+id/warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/item_padding"
                android:text="@string/cancel"
                android:textColor="@color/button" />

            <TextView
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/shape_button"
                android:padding="@dimen/item_padding"
                android:text="@string/accept"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>